--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <section>
         <div class="topnav">
             <a class="active" href="#home">Home</a>
-            <a href="#news">About</a>
-            <a href="#contact">Education</a>
-            <a href="#about">Skills</a>
+            <a href="#About">About</a>
+            <a href="#Education">Education</a>
+            <a href="#Skills">Skills</a>
           </div>
     <div class="home">
         <div class="info">
