--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                     <a href="https://github.com/Chetanvenkat"><i class="fa-brands fa-github"></i></a>
                 </div>
                 <div class="image">
-                    <img src="C:\Users\Guest1\Downloads\profile.jpg">
+                    <img src="https://github.com/user-attachments/assets/f5861900-7efd-4f45-9801-9e844111a5d7">
                 </div>     
                                                     
     </div>
