--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             </p>
         </div>
     </br>
-        <a href="C:\Users\Guest1\OneDrive\ドキュメント\Resume_1.docx"><button class="button">Resume</button></a>
+        <a href="https://github.com/user-attachments/files/16675900/Resume_1.docx"><button class="button">Resume</button></a>
     </br>
     <div class="social">
         <a href="https://www.instagram.com/chetan_n77/"><i class="fa-brands fa-instagram"></i></a>
